# ACCESS_notebook

./: .gitignore  HeNeAr_gris300.fits  check_transit_interactive.py  check_transits_interactive.py  get_lines_interactive.py  get_mask_coords.py  noao_flux.fits  noao_line_list.txt  notebook.ipynb  notebook.jl  opts_check_transit_interactive_WASP50.py  opts_get_mask_coords.py  pyproject.toml  utils.py  utils.py_bak  wav_cal.ipynb
