[tool.poetry]
name = "access_notebook"
version = "0.1.0"
description = ""
authors = ["Ian Weaver <iweaver@mailbox.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.7"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
mplcyberpunk = "^0.3.0"
numpy = "^1.22.1"
pandas = "^1.3.5"
corner = "^2.2.1"
batman-package = "^2.4.8"
astropy = "^5.0"
tqdm = "^4.62.3"
PyAstronomy = "^0.17.1"
george = "^0.4.0"
PyQt5 = "^5.15.6"
arviz = "^0.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
